# DREAMSim

./: .gitignore  README.md  muonSetup.sh  setup.sh
jobs/: jobSubmission.py
opticssim/: CMakeLists.txt  exampleB4b.cc  paramBatch03_single.mac  paramBatch03_single_ele.mac  paramBatch03_single_photon.mac  paramBatch03_single_photon2.mac  vis.mac
opticssim/include/: B4DetectorConstruction.hh  B4bEventAction.hh  B4bPhysicsList.hh  B4bRunAction.hh  CaloHit.h  CaloTree.h  PhotonInfo.h  Py8Jet.h
opticssim/src/: B4DetectorConstruction.cc  B4PrimaryGeneratorAction.cc  B4bRunAction.cc  B4bSteppingAction.cc  B4xTrackingAction.cc  CaloTree.cc  Py8Jet.cc
plotter/: 2D_hist_analysis_v2.py  analyzePKL01.ipynb  circles.C  code.py  datadeconv.py  datadeconv2.py  debuggindeconv.py  distributionpulse.py  distributionpulseplots.py  distributionroot.py  drsdata.py  firstdeconv.py  hgdream-3d-06.ipynb  hgdream-3d-06a.ipynb  hgdream3dAnalysis.root  landau.py  learningplots.py  learningpy.py  learningpy2.py  makePlots.py  makePlotsOptics.py  makePlotsOpticsInFullSim2.py  makePlotsOpticsInFullSimCT.py  makePlotsRDF.py  makePulse.py  makePulseCT.py  makePulsePlots.py  makePulsePlotsCT.py  nonoise.py  pkl_e+100.pkl  pulse_shape.ipynb  sanitycheck.py  secdeconv.py  thirddeconv.py
plotter/CMSPLOTS/: CMS_lumi.py  myFunction.py
plotter/data/: Sensl_FastOut_AveragePulse_1p8GHzBandwidth.feather  Sensl_FastOut_AveragePulse_1p8GHzBandwidth.root
plotter/inputs/: electrons.txt  muons.txt  neutrons.txt  pions.txt
plotter/inputs/optics/: electrons.txt  ops.txt  pions.txt
plotter/macros/: functions.cc  functions_cc.d  functions_cc_ACLiC_dict_rdict.pcm
plotter/old/: Sim_data_code.py  makePlots.py  pkl_pi+100.pkl  tb2024.py  tb2024a.py
sim/: GNUmakefile  exampleB4b.cc  paramBatch03_single.mac  paramBatch03_single_photon.mac  runBatch03_single_param.sh  runBatch03_single_param_bg01.sh  vis.mac
sim/include/: B4PrimaryGeneratorAction.hh  B4bSteppingAction.hh  B4xTrackingAction.hh  CaloHit.h  CaloID.h  CaloTree.h  PhotonInfo.h
sim/src/: B4DetectorConstruction.cc  B4PrimaryGeneratorAction.cc  B4bEventAction.cc  B4bSteppingAction.cc  CaloHit.cc  CaloID.cc  CaloTree.cc
